--- a/index.html
+++ b/index.html
@@ -88,18 +88,20 @@
 					<source media="(min-width: 768px)" srcset="assets/image/cover_main_pc_01.png">
 					<img src="assets/image/cover_main_sp_01.png" alt="">
 				</picture>
-				<div class="cover__container">
-					<img src="assets/image/frame_left_01.png" alt="">
-					<div>
-						<p class="cover__text-01">難関大学の合格実績</p>
-						<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
+				<div class="cover__wrapper">
+					<div class="cover__container">
+						<img src="assets/image/frame_left_01.png" alt="">
+						<div>
+							<p class="cover__text-01">難関大学の合格実績</p>
+							<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
+						</div>
+						<img src="assets/image/frame_right_01.png" alt="">
 					</div>
-					<img src="assets/image/frame_right_01.png" alt="">
-				</div>
-				<div class="cover__wrapper-01">
-					<p class="cover__text-04">現役高校生・高卒生</p>
-					<p class="cover__text-05">入学説明会の</p>
-					<p class="cover__text-06">お申し込み開始</p>
+					<div class="cover__wrapper-01">
+						<p class="cover__text-04">現役高校生・高卒生</p>
+						<p class="cover__text-05">入学説明会の</p>
+						<p class="cover__text-06">お申し込み開始</p>
+					</div>
 				</div>
 			</div>
 
@@ -185,14 +187,14 @@
 								<div class="course__tab-content-wrapper">
 									<!-- 1個目 -->
 									<div class="course__tab-content-item">
-										<a href="/entry" class="course__tab-content-item--link">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
 												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_01.png">
 												<img src="assets/image/cource_tab_sp_01.png" alt="">
 											</picture>
 										</a>
 										<div class="course__tab-content-item--text">
-											<a href="/entry" class="course__tab-content-item--link-text">
+											<a href="#" class="course__tab-content-item--link-text">
 												<picture>
 													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
 													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
@@ -203,44 +205,56 @@
 									</div>
 									<!-- 2個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_02.png">
-											<img src="assets/image/cource_tab_sp_02.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_02.png">
+												<img src="assets/image/cource_tab_sp_02.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">高校3年生</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">高校3年生</span>
+											</a>
 										</div>
 									</div>
 									<!-- 3個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_03.png">
-											<img src="assets/image/cource_tab_sp_03.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_03.png">
+												<img src="assets/image/cource_tab_sp_03.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">高校2年生</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">高校2年生</span>
+											</a>
 										</div>
 									</div>
 									<!-- 4個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_04.png">
-											<img src="assets/image/cource_tab_sp_04.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_04.png">
+												<img src="assets/image/cource_tab_sp_04.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">高校1年生</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">高校1年生</span>
+											</a>
 										</div>
 									</div>
 								</div>
@@ -250,58 +264,74 @@
 								<div class="course__tab-content-wrapper">
 									<!-- 1個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_05.png">
-											<img src="assets/image/cource_tab_sp_05.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_05.png">
+												<img src="assets/image/cource_tab_sp_05.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">難関大学・医学部合格を目指す</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">難関大学・医学部合格を目指す</span>
+											</a>
 										</div>
 									</div>
 									<!-- 2個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_06.png">
-											<img src="assets/image/cource_tab_sp_06.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_06.png">
+												<img src="assets/image/cource_tab_sp_06.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">名門私立大学合格を目指す</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">名門私立大学合格を目指す</span>
+											</a>
 										</div>
 									</div>
 									<!-- 3個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_07.png">
-											<img src="assets/image/cource_tab_sp_07.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_07.png">
+												<img src="assets/image/cource_tab_sp_07.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">国公立大学合格を目指す</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">国公立大学合格を目指す</span>
+											</a>
 										</div>
 									</div>
 									<!-- 4個目 -->
 									<div class="course__tab-content-item">
-										<picture>
-											<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_08.png">
-											<img src="assets/image/cource_tab_sp_08.png" alt="">
-										</picture>
-										<div class="course__tab-content-item--text">
+										<a href="#" class="course__tab-content-item--link">
 											<picture>
-												<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
-												<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												<source media="(min-width: 768px)" srcset="assets/image/cource_tab_pc_08.png">
+												<img src="assets/image/cource_tab_sp_08.png" alt="">
 											</picture>
-											<span class="course__tab-content-item--text-detail">海外の大学合格を目指す</span>
+										</a>
+										<div class="course__tab-content-item--text">
+											<a href="#" class="course__tab-content-item--link-text">
+												<picture>
+													<source media="(min-width: 768px)" srcset="assets/image/course_tab_arrow_right_pc_01.svg">
+													<img src="assets/image/course_tab_arrow_right_sp_01.svg" alt="">
+												</picture>
+												<span class="course__tab-content-item--text-detail">海外の大学合格を目指す</span>
+											</a>
 										</div>
 									</div>
 								</div>
