--- a/index.html
+++ b/index.html
@@ -84,23 +84,21 @@
 
 			<!-- カバー -->
 			<div class="cover">
-				<picture>
-					<source media="(min-width: 768px)" srcset="assets/image/cover_main_pc_01.png">
-					<img src="assets/image/cover_main_sp_01.png" alt="">
-				</picture>
-				<div class="cover__wrapper">
-					<div class="cover__container">
-						<img src="assets/image/frame_left_01.png" alt="">
-						<div>
-							<p class="cover__text-01">難関大学の合格実績</p>
-							<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
+				<div class="cover__image">
+					<div class="cover__wrapper">
+						<div class="cover__container">
+							<img src="assets/image/frame_left_01.png" alt="">
+							<div>
+								<p class="cover__text-01">難関大学の合格実績</p>
+								<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
+							</div>
+							<img src="assets/image/frame_right_01.png" alt="">
 						</div>
-						<img src="assets/image/frame_right_01.png" alt="">
-					</div>
-					<div class="cover__wrapper-01">
-						<p class="cover__text-04">現役高校生・高卒生</p>
-						<p class="cover__text-05">入学説明会の</p>
-						<p class="cover__text-06">お申し込み開始</p>
+						<div class="cover__wrapper-01">
+							<p class="cover__text-04">現役高校生・高卒生</p>
+							<p class="cover__text-05">入学説明会の</p>
+							<p class="cover__text-06">お申し込み開始</p>
+						</div>
 					</div>
 				</div>
 			</div>
