241128_提出用完了

--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
 			<div class="cover">
 				<div class="cover__image">
 					<div class="cover__wrapper">
-						<div class="cover__container">
-							<img src="assets/image/frame_left_01.png" alt="">
+						<div class="badge">
+							<img class="badge__frame-image" src="assets/image/frame_left_01.png" alt="">
 							<div>
-								<p class="cover__text-01">難関大学の合格実績</p>
-								<p class="cover__text-02">No.<span class="cover__text-03">1</span></p>
+								<p class="badge__text-first">難関大学の合格実績</p>
+								<p class="badge__text-second">No.<span class="badge__text-none">1</span></p>
 							</div>
-							<img src="assets/image/frame_right_01.png" alt="">
+							<img class="badge__frame-image" src="assets/image/frame_right_01.png" alt="">
 						</div>
-						<div class="cover__wrapper-01">
-							<p class="cover__text-04">現役高校生・高卒生</p>
-							<p class="cover__text-05">入学説明会の</p>
-							<p class="cover__text-06">お申し込み開始</p>
+						<div class="catch">
+							<p class="catch__text-first">現役高校生・高卒生</p>
+							<p class="catch__text-second">入学説明会の</p>
+							<p class="catch__text-third">お申し込み開始</p>
 						</div>
 					</div>
 				</div>
@@ -110,11 +110,11 @@
 			</div>
 
 			<!-- 選ばれる3つの理由 -->
-			<section id="reason" class="reason_00">
+			<section id="reason" class="reason_zero">
 				<div class="reason__container">
-					<h2 class="reason__title-01">選ばれる<span class="reason__title-02">3</span>つの理由</h2>
+					<h2 class="reason__title-first">選ばれる<span class="reason__title-second">3</span>つの理由</h2>
 					<!-- 1個目 -->
-					<div class="reason__row-01 reason__row">
+					<div class="reason__row-first reason__row">
 						<div>
 							<picture>
 								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_01.jpg">
@@ -123,12 +123,12 @@
 						</div>
 						<div>
 							<h3 class="reason__point">Point<span class="reason__space"> </span><span class="reason__number">1</span></h3>
-							<h4 class="reason__paragraph-01">実績のある講師陣だから安心</h4>
-							<p class="reason__text-01">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+							<h4 class="reason__paragraph-first">実績のある講師陣だから安心</h4>
+							<p class="reason__text-first">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
 						</div>
 					</div>
 					<!-- 2個目 -->
-					<div class="reason__row-02 reason__row">
+					<div class="reason__row-second reason__row">
 						<div>
 							<picture>
 								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_02.jpg">
@@ -137,12 +137,12 @@
 						</div>
 						<div>
 							<h3 class="reason__point">Point<span class="reason__space"> </span><span class="reason__number">2</span></h3>
-							<h4 class="reason__paragraph-02">オンラインにも対応だから、早送り巻き戻し視聴できる。</h4>
-							<p class="reason__text-02">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+							<h4 class="reason__paragraph-second">オンラインにも対応だから、早送り巻き戻し視聴できる。</h4>
+							<p class="reason__text-second">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
 						</div>
 					</div>
 					<!-- 3個目 -->
-					<div class="reason__row-03 reason__row">
+					<div class="reason__row-third reason__row">
 						<div>
 							<picture>
 								<source media="(min-width: 768px)" srcset="assets/image/reason_main_pc_03.jpg">
@@ -151,8 +151,8 @@
 						</div>
 						<div>
 							<h3 class="reason__point">Point<span class="reason__space"> </span><span class="reason__number">3</span></h3>
-							<h4 class="reason__paragraph-03">徹底した個別指導で、弱点を残さずそれぞれに合わせた大学受験対策。</h4>
-							<p class="reason__text-03">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+							<h4 class="reason__paragraph-third">徹底した個別指導で、弱点を残さずそれぞれに合わせた大学受験対策。</h4>
+							<p class="reason__text-third">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
 						</div>
 					</div>
 				</div>
@@ -350,7 +350,7 @@
 			</div>
 
 			<!-- 費用 -->
-			<section id="cost" class="cost-00">
+			<section id="cost" class="cost-zero">
 				<h2 class="cost__title">費 用</h2>
 				<div class="cost__container">
 					<table class="cost__table">
