メンタリング後の修正質問

--- a/index.html
+++ b/index.html
@@ -408,25 +408,21 @@
 				</div>
 			</div>
 
-			<div class="question__container ">
-				<div class="question">
-					<a href="/faq" class="question__link">
-						<picture>
-							<source media="(min-width: 768px)" srcset="assets/image/question_pc_01.png">
-							<img src="assets/image/question_sp_01.png" alt="">
-						</picture>
-						<span class="question__text">よくあるご質問</span>
-					</a>
-				</div>
-				<div class="search">
-					<a href="/search" class="search__link">
-						<picture>
-							<source media="(min-width: 768px)" srcset="assets/image/search_pc_01.png">
-							<img src="assets/image/search_sp_01.png" alt="">
-						</picture>
-						<span class="search__text">お近くの教室を探す</span>
-					</a>
-				</div>
+			<div class="question__container">
+				<a href="/faq" class="question-link">
+					<picture>
+						<source media="(min-width: 768px)" srcset="assets/image/question_pc_01.png">
+						<img class="footer-link__image" src="assets/image/question_sp_01.png" alt="">
+					</picture>
+					<span class="question__text">よくあるご質問</span>
+				</a>
+				<a href="/search" class="search-link">
+					<picture>
+						<source media="(min-width: 768px)" srcset="assets/image/search_pc_01.png">
+						<img class="footer-link__image" src="assets/image/search_sp_01.png" alt="">
+					</picture>
+					<span class="search__text">お近くの教室を探す</span>
+				</a>
 			</div>
 
 
