--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </a>
                         </li>
                     </ul>
-                    <a href="/entry" class="button-session">入学説明会に申し込む</a>
+                    <a href="/entry" class="button__session">入学説明会に申し込む</a>
                 </nav>
 
 
@@ -104,9 +104,9 @@
             </div>
 
             <ul class="button__wrapper">
-                <li><a href="/inquiry" class="button-yellow">入学のお問い合わせ</a></li>
-                <li><a href="/freetrial" class="button-orange">無料体験に申し込む</a></li>
-                <li><a href="/request" class="button-green ">資料請求する</a></li>
+                <li><a href="/inquiry" class="button__yellow">入学のお問い合わせ</a></li>
+                <li><a href="/freetrial" class="button__orange">無料体験に申し込む</a></li>
+                <li><a href="/request" class="button__green ">資料請求する</a></li>
             </ul>
 
             <!-- 選ばれる3つの理由 -->
@@ -164,7 +164,10 @@
                     <div>
                         <p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
                     </div>
-                    <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                    <div class="apply__wrapper">
+                        <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                        <a href="/freetrial" class="button__orange button__orange-cta">無料体験に申し込む</a>
+                    </div>
                 </div>
             </div>
 
@@ -345,7 +348,10 @@
                     <div>
                         <p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
                     </div>
-                    <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                    <div class="apply__wrapper">
+                        <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                        <a href="/freetrial" class="button__orange button__orange-cta">無料体験に申し込む</a>
+                    </div>
                 </div>
             </div>
 
@@ -404,7 +410,10 @@
                     <div>
                         <p class="apply__text">入学ご検討の方は、まずは入学説明会にお越しください</p>
                     </div>
-                    <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                    <div class="apply__wrapper">
+                        <a href="/entry" class="apply__button-text">入学説明会に申し込む</a>
+                        <a href="/freetrial" class="button__orange button__orange-cta">無料体験に申し込む</a>
+                    </div>
                 </div>
             </div>
 
