250107_既存サイトの修正

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                             <img class="badge__frame-image" src="assets/image/frame_right_01.png" alt="">
                         </div>
                         <h1 class="catch">
-                            <p class="catch__text-first">現役高校生・高卒生</p>
-                            <p class="catch__text-second">入学説明会の</p>
-                            <p class="catch__text-third">お申し込み開始</p>
+                            <span class="catch__text-first">現役高校生・高卒生</span>
+                            <span class="catch__text-second">入学説明会の</span>
+                            <span class="catch__text-third">お申し込み開始</span>
                         </h1>
                     </div>
                 </div>
